<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_info"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/google_blue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:text="@string/please_provide_your_name_and_an_optional_profile_photo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@style/CircularDeterminateProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:progress="0"
                        android:visibility="visible" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardCornerRadius="50dp">

                            <ImageView
                                android:id="@+id/profileImage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_camera" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <Button
                        android:id="@+id/get_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/ic_camera2" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/pleaseWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="please wait..."
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:visibility="invisible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp">


                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textStyle="bold"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/enter_your_name"
                    android:textAlignment="center" />

            </RelativeLayout>

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:textStyle="bold"
                android:textSize="20sp"
                android:hint="@string/age"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/maleCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/male" />

                <CheckBox
                    android:id="@+id/femaleCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/female" />

                <CheckBox
                    android:id="@+id/otherCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/other" />

            </LinearLayout>

            <Button
                android:id="@+id/setContinue"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style"
                android:text="@string/continue_"
                android:textAllCaps="false"
                android:textColor="@color/google_blue" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>