<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="MyThemeOverlayAlertDialog">

    <RelativeLayout
        android:id="@+id/successCard"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_above="@+id/buttonLayout"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/join_room"/>

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/enter_room_id"
                    android:textAlignment="center"
                    android:textColor="@color/google_blue"
                    android:background="@drawable/edit_text_style" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/yesButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="2dp"
                        android:background="@color/film"
                        android:text="@string/done"
                        android:textAllCaps="false"
                        android:textColor="@color/google_blue" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/noButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="2dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/film"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/google_blue" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>