<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Activities.SelectPlayersActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_above="@+id/continueButton"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:hint="@string/add_players"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_add"
                android:text="@string/plus"
                android:textColor="@color/google_green"
                android:textSize="35sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:numColumns="2"
            android:verticalSpacing="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        android:background="@drawable/button_style"
        android:text="@string/continue_"
        android:textColor="@color/google_green" />

</RelativeLayout>