<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.FriendFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:gravity="center"
        android:layout_above="@+id/template"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/logoBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_logo_hamm_lineaer"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/roomIdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="15sp"
                android:text="@string/room_id"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/edit_text_style"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/roomId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#535353"
                    android:textIsSelectable="true"
                    android:text="--"/>

                <Button
                    android:id="@+id/copyButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_baseline_content_copy_24"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/createRoomButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/button_style"
            android:textColor="@color/google_blue"
            android:text="@string/create_room"/>

        <Button
            android:id="@+id/joinButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="10dp"

            android:background="@drawable/button_style"
            android:textColor="@color/google_blue"
            android:text="@string/join_room"/>
    </LinearLayout>

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/template"
        app:gnt_template_type="@layout/gnt_medium_template_view"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />
</RelativeLayout>